<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            android:id="@+id/barcode_scanner_cardview"
            android:layout_gravity="center"
            android:minHeight="80dp"
            >

            <!-- Graph -->
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorPrimaryDark"
                android:elevation="0dp"/>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp" android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graph_title"
                android:textColor="#fff"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optimum_title"
                android:textColor="#fff"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low_label"
                        android:textColor="#fff"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highest_label"
                        android:textColor="#fff"
                        android:layout_gravity="top"
                        android:layout_alignParentRight="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:id="@+id/lowest_reading_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lowest_reading"
                        android:textColor="#fff"
                        android:textSize="30dp"
                        />
                    <TextView
                        android:id="@+id/highest_reading_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highest_reading"
                        android:textColor="#fff"
                        android:textSize="30dp"
                        android:layout_gravity="top"
                        android:layout_alignParentRight="true"
                        />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_reading_title"
                android:textColor="#fff"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/current_reading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_reading"
                android:textColor="#fff"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center"
                android:textSize="30dp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>





