<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="0dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:background="@color/orange"
            android:layout_height="20dp"
            android:text=""
            android:padding="0dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/soil_moisture_dashboard_btn"

                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/soil_moisture"
                        android:layout_marginTop="16dp"
                        android:layout_centerInParent="true"
                        android:elevation="8dp"
                        />

                    <TextView
                        android:id="@+id/soil_moisture_dashboard_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="120dp"
                        android:text="@string/soil_moisture_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/temperature_dashboard_btn"
                        android:src="@drawable/temperature"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="16dp"
                        android:layout_centerInParent="true"
                        />

                    <TextView
                        android:id="@+id/temperature_dashboard_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="120dp"
                        android:text="@string/temperature_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/lighting_dashboard_btn"

                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:layout_centerInParent="true"


                        />

                    <TextView
                        android:id="@+id/lighting_dashboard_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="100dp"
                        android:text="@string/lighting_label"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/airflow_dashboard_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="26dp"
                        android:layout_centerInParent="true"
                        />

                    <TextView
                        android:id="@+id/airflow_dashboard_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="100dp"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>


